style.css
:root {
    --grid-unit: calc(calc(95vh) / 900);
}
body {
    display: flex;
    justify-content: center;
    height: 100vh;
    margin: 0;
    overflow: hidden;
}
.content, .sidebar {
    display: flex;
    flex-direction: column;
    margin: 0 calc(10 * var(--grid-unit));
}
.sidebar {
    justify-content: center;
}
.header {
    display: flex;
    flex-direction: row;
    align-items: last baseline;
    font-family: Lato, sans-serif;
    font-size: calc(30 * var(--grid-unit));
    line-height: 1;
    height: calc(50 * var(--grid-unit));
    margin: calc(5 * var(--grid-unit)) calc(30 * var(--grid-unit)) calc(5 * var(--grid-unit));
}
#title {
    font-weight: bold;
    color: #303030;
}
#author {
    font-style: italic;
    color: #7f7f7f;
    margin-left: calc(10 * var(--grid-unit));
}
#board-container {
    width: calc(865 * var(--grid-unit));
    height: calc(865 * var(--grid-unit));
    margin: 0 calc(10 * var(--grid-unit));
    overflow: hidden;
}
#noscript {
    font-family: Lato, sans-serif;
    font-size: calc(36 * var(--grid-unit));
    text-align: center;
    line-height: 1;
    color: #303030;
    width: 100%;
    margin-top: calc(432 * var(--grid-unit));
}
.board {
    vertical-align: top;
    width: 100%;
    height: 100%;
    user-select: none;
}
.panel {
    display: flex;
    flex-direction: column;
    margin: calc(10 * var(--grid-unit)) 0;
}
.panel-row {
    display: flex;
    flex-direction: row;
}
.panel-column {
    display: flex;
    flex-direction: column;
}
button {
    font-family: Lato, sans-serif;
    font-size: calc(30 * var(--grid-unit));
    color: #ffffff;
    background: #607fbf;
    border: 0;
    border-radius: calc(10 * var(--grid-unit));
    width: max-content;
    margin: calc(5 * var(--grid-unit));
    padding: calc(10 * var(--grid-unit)) calc(20 * var(--grid-unit));
    cursor: pointer;
}
button:active {
    color: #dfdfdf;
    background: #5070af;
}
button.toggle-off {
    color: #304060;
    background: #bfcfdf;
}
button.toggle-off:active {
    color: #203050;
    background: #9fafbf;
}
.digit-button, .corner-button, .center-button, .color-button {
    width: calc(90 * var(--grid-unit));
    height: calc(90 * var(--grid-unit));
    padding: 0;
}
.digit-button {
    font-size: calc(60 * var(--grid-unit));
}
.corner-button {
    font-size: calc(30 * var(--grid-unit));
}
.center-button {
    font-size: calc(30 * var(--grid-unit));
}
.corner-button div {
    margin: calc(-30 * var(--grid-unit)) 0 0 calc(-40 * var(--grid-unit));
}
.color-button div {
    display: inline-block;
    color: #00000000;
    border: calc(2 * var(--grid-unit)) solid #304060;
    border-radius: calc(4 * var(--grid-unit));
    width: calc(60 * var(--grid-unit));
    height: calc(60 * var(--grid-unit));
}
.color-button:active div {
    border-color: #203050;
}
.color-square-1 {
    background: #ff8f8f;
}
.color-square-2 {
    background: #ffc78f;
}
.color-square-3 {
    background: #ffef8f;
}
.color-square-4 {
    background: #8fdf8f;
}
.color-square-5 {
    background: #8fefef;
}
.color-square-6 {
    background: #8fbfff;
}
.color-square-7 {
    background: #c79fff;
}
.color-square-8 {
    background: #bfbfbf;
}
.color-square-9 {
    background: #8f8f8f;
}
.undo-button, .redo-button {
    font-size: calc(80 * var(--grid-unit));
    width: calc(90 * var(--grid-unit));
    height: calc(90 * var(--grid-unit));
    padding: 0;
}
.undo-button div, .redo-button div {
    margin-top: calc(-20 * var(--grid-unit));
}
.redo-button {
    transform: scale(-1, 1);
}
.delete-button {
    font-size: calc(50 * var(--grid-unit));
    width: calc(90 * var(--grid-unit));
    height: calc(90 * var(--grid-unit));
    padding: 0;
}
.digit-mode-button, .corner-mode-button, .center-mode-button, .color-mode-button {
    width: calc(90 * var(--grid-unit));
    height: calc(90 * var(--grid-unit));
    padding: 0;
    margin-left: calc(15 * var(--grid-unit));
}
:is(.digit-mode-button, .corner-mode-button, .center-mode-button, .color-mode-button) div {
    display: inline-flex;
    flex-direction: column;
    justify-content: center;
    border: calc(4 * var(--grid-unit)) solid #ffffff;
    border-radius: calc(4 * var(--grid-unit));
    width: calc(60 * var(--grid-unit));
    height: calc(60 * var(--grid-unit));
}
:is(.digit-mode-button, .corner-mode-button, .center-mode-button, .color-mode-button):active div {
    border-color: #dfdfdf;
}
:is(.digit-mode-button, .corner-mode-button, .center-mode-button, .color-mode-button).toggle-off div {
    border-color: #304060;
}
:is(.digit-mode-button, .corner-mode-button, .center-mode-button, .color-mode-button).toggle-off:active div {
    border-color: #203050;
}
.digit-mode-button {
    font-size: calc(50 * var(--grid-unit));
}
.corner-mode-button, .center-mode-button {
    font-size: calc(25 * var(--grid-unit));
}
.corner-mode-button {
    line-height: calc(30 * var(--grid-unit));
    word-spacing: calc(10 * var(--grid-unit));
}
.color-mode-button {
    font-size: calc(40 * var(--grid-unit));
}
.pause-button, .play-button {
    font-size: calc(30 * var(--grid-unit));
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    width: calc(50 * var(--grid-unit));
    height: calc(50 * var(--grid-unit));
    margin-right: 0;
}
.pause-button {
    padding: 0 0 calc(5 * var(--grid-unit)) calc(4 * var(--grid-unit));
}
.play-button {
    font-size: calc(25 * var(--grid-unit));
    padding: 0 0 calc(1 * var(--grid-unit)) calc(6 * var(--grid-unit));
}
.timer-time {
    font-family: Lato, sans-serif;
    font-size: calc(30 * var(--grid-unit));
    text-align: right;
    color: #505050;
    background: #ffffff;
    border: calc(3 * var(--grid-unit)) solid #607fbf;
    box-sizing: border-box;
    width: calc(190 * var(--grid-unit));
    height: calc(50 * var(--grid-unit));
    margin: calc(5 * var(--grid-unit)) 0;
    padding: 0 calc(15 * var(--grid-unit));
    cursor: text;
}
.reset-button {
    font-size: calc(30 * var(--grid-unit));
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    width: calc(50 * var(--grid-unit));
    height: calc(50 * var(--grid-unit));
    padding: 0 calc(3 * var(--grid-unit)) 0 0;
    margin-left: 0;
}
#pause-overlay {
    height: 0;
    z-index: 1;
    display: none;
    cursor: pointer;
}
.pause-overlay-panel {
    font-family: Lato, sans-serif;
    font-size: calc(100 * var(--grid-unit));
    font-weight: bold;
    color: #303030;
    border: calc(3 * var(--grid-unit)) solid #607fbf;
    box-sizing: border-box;
    width: calc(865 * var(--grid-unit));
    height: calc(865 * var(--grid-unit));
    margin: 0 calc(10 * var(--grid-unit));
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.pause-blur {
    filter: blur(calc(50 * var(--grid-unit))) grayscale(100%);
}
#rules-panel {
    display: none;
    min-height: 0;
}
.rules-title {
    font-family: Lato, sans-serif;
    font-size: calc(24 * var(--grid-unit));
    font-weight: bold;
    color: #303030;
    margin: 0 calc(15 * var(--grid-unit));
}
.rules {
    font-family: Lato, sans-serif;
    font-size: calc(18 * var(--grid-unit));
    color: #303030;
    background: #f4f8f4;
    box-sizing: border-box;
    border: calc(3 * var(--grid-unit)) solid #607fbf;
    border-radius: calc(3 * var(--grid-unit));
    width: calc(400 * var(--grid-unit));
    min-height: 0;
    overflow-y: auto;
    padding: 0 calc(5 * var(--grid-unit));
    margin: 0 calc(5 * var(--grid-unit));
}
.rules p {
    line-height: 1.1;
    margin: calc(5 * var(--grid-unit)) 0;
}

